--- a/index/main.css
+++ b/index/main.css
@@ -45,7 +45,7 @@ text-transform: uppercase;
     border: 2px solid black;
     height: 400px;
     width: 100%;
-    background-image: url("../img/imageForSharing.png");
+    background-image: url(./img/imageForSharing.png);
     background-size: cover;
     
 }
@@ -90,7 +90,7 @@ h2 {
 
 body {
     
-    background-image: url(../img/making%20jewelrz.jpg);
+    background-image: url(./img/makingjewelrz.jpg);
     min-width: 100%;
     object-fit:fill;
 }
@@ -128,7 +128,7 @@ a[href$="html"]{
     height: 300px;
     border: 2px solid #008;
     display: inline-block;
-    background-image: url(../img/white%20necklace.jpeg);
+    background-image: url(./img/whitenecklace.jpeg);
     background-size: contain;
     
 }
@@ -140,7 +140,7 @@ a[href$="html"]{
     border: 4px solid #008;
     border-radius: 20px;
     border-color: aqua;
-    background-image: url(../img/white%20ring.jpg);
+    background-image: url(./img/whitering.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
